FIX design projects + FIX skills select color

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
         <div class="skills_toggle_container">
             <div class="skills_toggle">
-                <p id="select_languages" class="skills_toggle_unselect">Langages</p>
-                <p id="select_tools" class="skills_toggle_unselect">Outils</p>
+                <p id="select_languages">Langages</p>
+                <p id="select_tools">Outils</p>
             </div>
         </div>
 
@@ -171,7 +171,214 @@
     <div id="projects" class="projects">
         <h1>Mes Projets</h1>
 
-        <div class="competences_content slideElementFromRight">
+        <div class="projects_list">
+            <div class="project_container">
+                <div class="project_box slideElementFromLeft">
+                    <div class="project_header">
+                        <div class="project_logo">
+                            <img src="annexes/icons/icon_neolink.png">
+                        </div>
+                        <div class="project_details">
+                            <h3><strong>Stage Néolink</strong></h3>
+                            <div class="project_label">
+                                <span>PHP</span>
+                                <span>SQL</span>
+                                <span>HTML</span>
+                                <span>CSS</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_desc">
+                        <p>
+                            Stage de fin de Licence dans le domaine de l'informatique. J'ai notamment pu effectuer de la maintenance.
+                        </p>
+                    </div>
+                    <div class="project_more">
+                        <a href="stage_neolink.html">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project_container">
+                <div class="project_box slideElementFromRight">
+                    <div class="project_header">
+                        <div class="project_logo">
+                            <img src="annexes/icons/icon_cnrs.png">
+                        </div>
+                        <div class="project_details">
+                            <h3><strong>Stage CNRS</strong></h3>
+                            <div class="project_label">
+                                <span>Illustrator</span>
+                                <span>InDesign</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_desc">
+                        <p>
+                            Stage de fin de DUT dans le domaine de la communication. Réalisation de visuels pour communiquer auprès du projet scientifique MATEX.
+                        </p>
+                    </div>
+                    <div class="project_more">
+                        <a href="stage_cnrs.html">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project_container">
+                <div class="project_box slideElementFromLeft">
+                    <div class="project_header">
+                        <div class="project_logo">
+                            <img src="annexes/icons/icon_motherload.png">
+                        </div>
+                        <div class="project_details">
+                            <h3><strong>Motherload</strong></h3>
+                            <div class="project_label">
+                                <span>Android</span>
+                                <span>Kotlin</span>
+                                <span>PHP</span>
+                                <span>SQL</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_desc">
+                        <p>
+                            Application mobile réalisée lors de ma 1<sup>re</sup> année de Master. Jeu qui consiste à creuser pour trouver des objets.
+                        </p>
+                    </div>
+                    <div class="project_more">
+                        <a href="motherload.html">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project_container">
+                <div class="project_box slideElementFromRight">
+                    <div class="project_header">
+                        <div class="project_logo">
+                            <img src="annexes/icons/icon_jpo.jpg">
+                        </div>
+                        <div class="project_details">
+                            <h3><strong>JPO Orléans</strong></h3>
+                            <div class="project_label">
+                                <span>Flutter</span>
+                                <span>Dart</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_desc">
+                        <p>
+                            Application mobile réalisée lors de ma 1<sup>re</sup> année de Master informatique. Application multiplateforme pour les Journées Portes Ouvertes de l'Université d'Orléans.
+                        </p>
+                    </div>
+                    <div class="project_more">
+                        <a href="jpo_orleans.html">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project_container">
+                <div class="project_box slideElementFromLeft">
+                    <div class="project_header">
+                        <div class="project_logo">
+                            <img src="annexes/icons/icon_todolist.png">
+                        </div>
+                        <div class="project_details">
+                            <h3><strong>ToDoList</strong></h3>
+                            <div class="project_label">
+                                <span>Flutter</span>
+                                <span>Dart</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_desc">
+                        <p>
+                            Application mobile réalisée lors de ma 1<sup>re</sup> année de Master informatique. Application multiplateforme qui permet de gérer une liste de tâches.
+                        </p>
+                    </div>
+                    <div class="project_more">
+                        <a href="todolist.html">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project_container">
+                <div class="project_box slideElementFromRight">
+                    <div class="project_header">
+                        <div class="project_logo">
+                            <img src="annexes/icons/icon_petitougrand.png">
+                        </div>
+                        <div class="project_details">
+                            <h3><strong>Petit ou Grand</strong></h3>
+                            <div class="project_label">
+                                <span>Android</span>
+                                <span>Java</span>
+                                <span>OpenGL</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_desc">
+                        <p>
+                            Application mobile réalisée lors de ma 1<sup>re</sup> année de Master informatique. Application Android et utilisation d'OpenGLES pour mettre en place un jeu de cartes.
+                        </p>
+                    </div>
+                    <div class="project_more">
+                        <a href="petit_ou_grand.html">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project_container">
+                <div class="project_box slideElementFromLeft">
+                    <div class="project_header">
+                        <div class="project_logo">
+                            <img src="annexes/icons/icon_cookie.png">
+                        </div>
+                        <div class="project_details">
+                            <h3><strong>Cookie Clicker</strong></h3>
+                            <div class="project_label">
+                                <span>Android</span>
+                                <span>Java</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_desc">
+                        <p>
+                            Application mobile Android réalisée lors de ma 3<sup>e</sup> année de Licence informatique.
+                        </p>
+                    </div>
+                    <div class="project_more">
+                        <a href="cookie_clicker.html">Voir plus</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project_container">
+                <div class="project_box slideElementFromRight">
+                    <div class="project_header">
+                        <div class="project_logo">
+                            <img src="annexes/icons/icon_tictactoe.png">
+                        </div>
+                        <div class="project_details">
+                            <h3><strong>TicTacToe</strong></h3>
+                            <div class="project_label">
+                                <span>Android</span>
+                                <span>Java / Kotlin</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project_desc">
+                        <p>
+                            Application mobile Android réalisée sur mon temps libre.
+                        </p>
+                    </div>
+                    <div class="project_more">
+                        <a href="tictactoe.html">Voir plus</a>
+                    </div>
+                </div>    
+            </div>
+        </div>
+
+        <!--<div class="competences_content slideElementFromRight">
             <a class="project" href="stage_neolink.html">
                 <div class="project_img">
                     <img src="annexes/icons/icon_neolink.png">
@@ -227,8 +434,7 @@
                 </div>
                 <p><strong>TicTacToe</strong><br>(en cours)</p>
             </a>
-            
-        </div>
+        </div>-->
     </div>
     
 
