ADD btn voir plus / voir moins de projets

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     </div>
 
 
-    <div id="projects" class="projects">
-        <h1>Mes Projets</h1>
+    <div id="experiences" class="experiences">
+        <h1>Mes Expériences</h1>
 
         <div class="projects_list">
             <div class="project_container">
@@ -193,7 +193,9 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Stage de fin de Licence dans le domaine de l'informatique. J'ai notamment pu effectuer de la maintenance.
+                            Stage de fin de Licence dans le domaine de l'informatique.
+                            Lors de cette expérience, j'ai notamment pu effectuer de la maintenance (résolution de bugs) en PHP sur le framework de l'entreprise.
+                            J'ai travaillé auprès de développeurs front et back.
                         </p>
                     </div>
                     <div class="project_more">
@@ -218,7 +220,8 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Stage de fin de DUT dans le domaine de la communication. Réalisation de visuels pour communiquer auprès du projet scientifique MATEX.
+                            Stage de fin de DUT dans le domaine de la communication.
+                            J'ai notamment eu à réaliser la charte graphique et des visuels (roll-up, dépliant...) afin de lancer la stratégie de communication pour le projet scientifique MATEX porté par le CNRS et la région Centre-Val de Loire.
                         </p>
                     </div>
                     <div class="project_more">
@@ -226,7 +229,14 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
+
+    <div id="projects" class="projects">
+        <h1>Mes Projets</h1>
+
+        <div class="projects_list">
             <div class="project_container">
                 <div class="project_box slideElementFromLeft">
                     <div class="project_header">
@@ -245,7 +255,8 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile réalisée lors de ma 1<sup>re</sup> année de Master. Jeu qui consiste à creuser pour trouver des objets.
+                            Application mobile Android réalisée lors de ma 1<sup>re</sup> année de Master.
+                            Le projet consiste en un jeu permet aux joueurs de creuser sur leur position afin de trouver des objets.
                         </p>
                     </div>
                     <div class="project_more">
@@ -270,7 +281,8 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile réalisée lors de ma 1<sup>re</sup> année de Master informatique. Application multiplateforme pour les Journées Portes Ouvertes de l'Université d'Orléans.
+                            Application mobile multiplateforme réalisée lors de ma 1<sup>re</sup> année de Master informatique.
+                            Cette application permet de consulter les différents évènements prévus pour les Journées Portes Ouvertes de l'Université d'Orléans.
                         </p>
                     </div>
                     <div class="project_more">
@@ -295,7 +307,8 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile réalisée lors de ma 1<sup>re</sup> année de Master informatique. Application multiplateforme qui permet de gérer une liste de tâches.
+                            Application mobile multiplateforme réalisée lors de ma 1<sup>re</sup> année de Master informatique.
+                            Le but de cette application et de permettre à l'utilisateur de gérer une liste de tâches.
                         </p>
                     </div>
                     <div class="project_more">
@@ -304,7 +317,7 @@
                 </div>
             </div>
 
-            <div class="project_container">
+            <div id="hidden_project" class="project_container">
                 <div class="project_box slideElementFromRight">
                     <div class="project_header">
                         <div class="project_logo">
@@ -321,7 +334,8 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile réalisée lors de ma 1<sup>re</sup> année de Master informatique. Application Android et utilisation d'OpenGLES pour mettre en place un jeu de cartes.
+                            Application mobile Android réalisée lors de ma 1<sup>re</sup> année de Master informatique.
+                            Le but était de réaliser un jeu de cartes (Petit ou Grand) en utilisant l'API OpenGL ES Application.
                         </p>
                     </div>
                     <div class="project_more">
@@ -330,7 +344,7 @@
                 </div>
             </div>
 
-            <div class="project_container">
+            <div id="hidden_project" class="project_container">
                 <div class="project_box slideElementFromLeft">
                     <div class="project_header">
                         <div class="project_logo">
@@ -347,6 +361,7 @@
                     <div class="project_desc">
                         <p>
                             Application mobile Android réalisée lors de ma 3<sup>e</sup> année de Licence informatique.
+                            L'application reprend le principe du jeu web coockie clicker adapté sur mobile.
                         </p>
                     </div>
                     <div class="project_more">
@@ -355,7 +370,7 @@
                 </div>
             </div>
 
-            <div class="project_container">
+            <div id="hidden_project" class="project_container">
                 <div class="project_box slideElementFromRight">
                     <div class="project_header">
                         <div class="project_logo">
@@ -372,13 +387,23 @@
                     <div class="project_desc">
                         <p>
                             Application mobile Android réalisée sur mon temps libre.
+                            L'application reprend le jeu du morpion.
                         </p>
                     </div>
                     <div class="project_more">
-                        <a href="tictactoe.html">Voir plus</a>
+                        <a id="hidden_projects_btn" href="tictactoe.html">Voir plus</a>
                     </div>
                 </div>    
             </div>
+
+            <div class="hidden_projects_btn_container project_more">
+                <a class="hidden_projects_btn view_more_project">Voir plus de projets +</a>
+            </div>
+
+            <div class="hidden_projects_btn_container project_more">
+                <a class="hidden_projects_btn view_less_project">Voir moins de projets -</a>
+            </div>
+
         </div>
 
         <!--<div class="competences_content slideElementFromRight">
