FIX btn voir plus/moins de projets

--- a/index.html
+++ b/index.html
@@ -397,11 +397,11 @@
             </div>
 
             <div class="hidden_projects_btn_container project_more">
-                <a class="hidden_projects_btn view_more_project">Voir plus de projets +</a>
+                <a class="hidden_projects_btn view_more_project">Voir plus de projets</a>
             </div>
 
             <div class="hidden_projects_btn_container project_more">
-                <a class="hidden_projects_btn view_less_project">Voir moins de projets -</a>
+                <a class="hidden_projects_btn view_less_project">Voir moins de projets</a>
             </div>
 
         </div>
