ADD pop animation on project box

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
         <div class="projects_list">
             <div class="project_container">
-                <div class="project_box slideElementFromLeft">
+                <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
                             <img src="annexes/icons/icon_motherload.png">
@@ -283,7 +283,7 @@
             </div>
 
             <div class="project_container">
-                <div class="project_box slideElementFromRight">
+                <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
                             <img src="annexes/icons/icon_jpo.jpg">
@@ -309,7 +309,7 @@
             </div>
 
             <div class="project_container">
-                <div class="project_box slideElementFromLeft">
+                <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
                             <img src="annexes/icons/icon_todolist.png">
@@ -335,7 +335,7 @@
             </div>
 
             <div id="hidden_project" class="project_container">
-                <div class="project_box slideElementFromRight">
+                <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
                             <img src="annexes/icons/icon_petitougrand.png">
@@ -362,7 +362,7 @@
             </div>
 
             <div id="hidden_project" class="project_container">
-                <div class="project_box slideElementFromLeft">
+                <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
                             <img src="annexes/icons/icon_cookie.png">
@@ -388,7 +388,7 @@
             </div>
 
             <div id="hidden_project" class="project_container">
-                <div class="project_box slideElementFromRight">
+                <div class="project_box popElement">
                     <div class="project_header">
                         <div class="project_logo">
                             <img src="annexes/icons/icon_tictactoe.png">
