--- a/index.html
+++ b/index.html
@@ -191,61 +191,41 @@
     <div id="experiences" class="experiences">
         <h1>Mes Expériences</h1>
 
-        <div class="projects_list">
-            <div class="project_container">
-                <div class="project_box slideElementFromLeft">
-                    <div class="project_header">
-                        <div class="project_logo">
-                            <img src="annexes/icons/icon_neolink.png">
-                        </div>
-                        <div class="project_details">
-                            <h3><strong>Stage Néolink</strong></h3>
-                            <div class="project_label">
-                                <span>PHP</span>
-                                <span>SQL</span>
-                                <span>HTML</span>
-                                <span>CSS</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project_desc">
-                        <p>
-                            Stage de fin de Licence dans le domaine de l'informatique.
-                            Lors de cette expérience, j'ai notamment pu effectuer de la maintenance (résolution de bugs) en PHP sur le framework de l'entreprise.
-                            J'ai travaillé auprès de développeurs front et back.
-                        </p>
-                    </div>
-                    <div class="project_more">
-                        <a href="stage_neolink.html">Voir plus</a>
-                    </div>
+        <div class="experiences_container">
+            <div class="line"></div>
+            <div class="circle exp1"></div>
+            <div class="circle exp2"></div>
+
+            <div class="experience_box exp1 slideElementFromLeft">
+                <p class="experience_title">Stage L3</p>
+                <p class="experience_subtitle">Néolink, Blois</p>
+                <div class="project_desc">
+                    <p>
+                        Stage de fin de Licence dans le domaine de l'informatique.
+                        Lors de cette expérience, j'ai notamment pu effectuer de la maintenance (résolution de bugs) en PHP sur le framework de l'entreprise.
+                        J'ai travaillé auprès de développeurs front et back.
+                    </p>
+                </div>
+                <div class="project_more">
+                    <a href="stage_neolink.html">Voir plus</a>
                 </div>
             </div>
 
-            <div class="project_container">
-                <div class="project_box slideElementFromRight">
-                    <div class="project_header">
-                        <div class="project_logo">
-                            <img src="annexes/icons/icon_cnrs.png">
-                        </div>
-                        <div class="project_details">
-                            <h3><strong>Stage CNRS</strong></h3>
-                            <div class="project_label">
-                                <span>Illustrator</span>
-                                <span>InDesign</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project_desc">
-                        <p>
-                            Stage de fin de DUT dans le domaine de la communication.
-                            J'ai notamment eu à réaliser la charte graphique et des visuels (roll-up, dépliant...) afin de lancer la stratégie de communication pour le projet scientifique MATEX porté par le CNRS et la région Centre-Val de Loire.
-                        </p>
-                    </div>
-                    <div class="project_more">
-                        <a href="stage_cnrs.html">Voir plus</a>
-                    </div>
+            <div class="experience_box exp2 slideElementFromRight">
+                <p class="experience_title">Stage DUT</p>
+                <p class="experience_subtitle">CNRS, Orléans</p>
+                <div class="project_desc">
+                    <p>
+                        Stage de fin de DUT dans le domaine de la communication.
+                        J'ai notamment eu à réaliser la charte graphique et des visuels (roll-up, dépliant...) afin de lancer la stratégie de communication pour le projet scientifique MATEX porté par le CNRS et la région Centre-Val de Loire.
+                    </p>
+                </div>
+                <div class="project_more">
+                    <a href="stage_cnrs.html">Voir plus</a>
                 </div>
             </div>
+
+            
         </div>
     </div>
 
