FIX experience design

--- a/index.html
+++ b/index.html
@@ -197,9 +197,16 @@
             <div class="circle exp2"></div>
 
             <div class="experience_box exp1 slideElementFromLeft">
-                <p class="experience_title">Stage L3</p>
-                <p class="experience_subtitle">Néolink, Blois</p>
-                <div class="project_desc">
+                <div class="experience_header">
+                    <div>
+                        <p class="experience_title">Stage L3</p>
+                        <p class="experience_subtitle">Néolink, Blois</p>
+                    </div>
+                    <div>
+                        <img src="annexes/icons/icon_neolink.png">
+                    </div>
+                </div>
+                <div class="experience_desc">
                     <p>
                         Stage de fin de Licence dans le domaine de l'informatique.
                         Lors de cette expérience, j'ai notamment pu effectuer de la maintenance (résolution de bugs) en PHP sur le framework de l'entreprise.
@@ -212,9 +219,16 @@
             </div>
 
             <div class="experience_box exp2 slideElementFromRight">
-                <p class="experience_title">Stage DUT</p>
-                <p class="experience_subtitle">CNRS, Orléans</p>
-                <div class="project_desc">
+                <div class="experience_header">
+                    <div>
+                        <p class="experience_title">Stage DUT</p>
+                        <p class="experience_subtitle">CNRS, Orléans</p>
+                    </div>
+                    <div>
+                        <img src="annexes/icons/icon_cnrs.png">
+                    </div>
+                </div>
+                <div class="experience_desc">
                     <p>
                         Stage de fin de DUT dans le domaine de la communication.
                         J'ai notamment eu à réaliser la charte graphique et des visuels (roll-up, dépliant...) afin de lancer la stratégie de communication pour le projet scientifique MATEX porté par le CNRS et la région Centre-Val de Loire.
