--- a/stage_cnrs.html
+++ b/stage_cnrs.html
@@ -42,7 +42,7 @@
         <h1>Stage CNRS</h1>
         <div class="project_content_container">
             <div class="project_content_img">
-                <img src="annexes/MATEX_Roll_Up.png" draggable="false">
+                <img src="annexes/icons/icon_cnrs.png" draggable="false">
             </div>
             <div class="project_content_text">
                 <h2>Contexte</h2>
