--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <a href="#">Accueil</a>
         <a href="#presentation">Présentation</a>
         <a href="#competences">Compétences</a>
-        <a href="#projects">Mes Projets</a>
+        <a href="#experiences">Expériences</a>
+        <a href="#projects">Projets</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -37,7 +38,8 @@
             <a class="menu" href="#">Accueil</a>
             <a class="menu" href="#presentation">Présentation</a>
             <a class="menu" href="#competences">Compétences</a>
-            <a class="menu" href="#projects">Mes Projets</a>
+            <a class="menu" href="#experiences">Expériences</a>
+            <a class="menu" href="#projects">Projets</a>
         </div>
     </nav>
 
