--- a/tictactoe.html
+++ b/tictactoe.html
@@ -15,10 +15,11 @@
 <body>
 
     <nav>
-        <a href="index.html#">Accueil</a>
-        <a href="index.html#presentation">Présentation</a>
-        <a href="index.html#competences">Compétences</a>
-        <a href="index.html#projects">Mes Projets</a>
+        <a href="#">Accueil</a>
+        <a href="#presentation">Présentation</a>
+        <a href="#competences">Compétences</a>
+        <a href="#experiences">Expériences</a>
+        <a href="#projects">Projets</a>
     </nav>
 
     <div class="menuBurgerBackground">
@@ -34,7 +35,8 @@
             <a class="menu" href="index.html#">Accueil</a>
             <a class="menu" href="index.html#presentation">Présentation</a>
             <a class="menu" href="index.html#competences">Compétences</a>
-            <a class="menu" href="index.html#projects">Mes Projets</a>
+            <a class="menu" href="index.html#experiences">Expériences</a>
+            <a class="menu" href="index.html#projects">Projets</a>
         </div>
     </nav>
 
