--- a/jpo_orleans.html
+++ b/jpo_orleans.html
@@ -15,11 +15,11 @@
 <body>
 
     <nav>
-        <a href="#">Accueil</a>
-        <a href="#presentation">Présentation</a>
-        <a href="#competences">Compétences</a>
-        <a href="#experiences">Expériences</a>
-        <a href="#projects">Projets</a>
+        <a href="index.html">Accueil</a>
+        <a href="index.html#presentation">Présentation</a>
+        <a href="index.html#competences">Compétences</a>
+        <a href="index.html#experiences">Expériences</a>
+        <a href="index.html#projects">Projets</a>
     </nav>
 
     <div class="menuBurgerBackground">
