UPDATE contenu projets

--- a/index.html
+++ b/index.html
@@ -268,8 +268,14 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile Android réalisée lors de ma 1<sup>re</sup> année de Master.
-                            Le projet consiste en un jeu permet aux joueurs de creuser sur leur position afin de trouver des objets.
+                            Application mobile Android réalisée lors de ma 1<sup>re</sup> année de Master informatique.
+                        </p>
+                        <p>
+                            Le but était de réaliser un jeu en ligne sur Android basé sur la localisation de l'utilisateur. 
+                            Dans ce jeu, on incarne un chercheur de trésors qui peut creuser un trou là où il se trouve et, selon notre chance, il est possible de déterrer des minéraux, voire des artefacts anciens et précieux.
+                        </p>
+                        <p>
+                            Après avoir accumulé des ressources, il est possible de les utiliser pour améliorer ses outils ou bien les vendre aux autres joueurs sur le marché.
                         </p>
                     </div>
                     <div class="project_more">
@@ -295,7 +301,12 @@
                     <div class="project_desc">
                         <p>
                             Application mobile multiplateforme réalisée lors de ma 1<sup>re</sup> année de Master informatique.
+                        </p>
+                        <p>
                             Cette application permet de consulter les différents évènements prévus pour les Journées Portes Ouvertes de l'Université d'Orléans.
+                            Il est possible de visualiser les évènements sur une carte et être alerté (par notification) avant qu'ils ne commencent (en les ajoutant en favoris).
+                            
+                           
                         </p>
                     </div>
                     <div class="project_more">
@@ -321,7 +332,12 @@
                     <div class="project_desc">
                         <p>
                             Application mobile multiplateforme réalisée lors de ma 1<sup>re</sup> année de Master informatique.
-                            Le but de cette application et de permettre à l'utilisateur de gérer une liste de tâches.
+                        </p>
+                        <p>
+                            Le but de cette application et de permettre à l'utilisateur de gérer une liste de tâches à faire.
+                            Il peut ainsi créer une tâche, la modifier ou la supprimer.
+                            Chaque tâche dispose d'un titre, d'une date et d'une description mais il est aussi possible d'ajouter un lieu.
+                            On a alors la possibilité de voir le lieu sur une carte ainsi que la météo actuelle.
                         </p>
                     </div>
                     <div class="project_more">
@@ -348,6 +364,8 @@
                     <div class="project_desc">
                         <p>
                             Application mobile Android réalisée lors de ma 1<sup>re</sup> année de Master informatique.
+                        </p>
+                        <p>
                             Le but était de réaliser un jeu de cartes (Petit ou Grand) en utilisant l'API OpenGL ES Application.
                         </p>
                     </div>
@@ -374,7 +392,10 @@
                     <div class="project_desc">
                         <p>
                             Application mobile Android réalisée lors de ma 3<sup>e</sup> année de Licence informatique.
-                            L'application reprend le principe du jeu web coockie clicker adapté sur mobile.
+                        </p>
+                        <p>
+                            Le principe du jeu est de clicker sur une image de cookie afin d'augmenter son score.
+                            Une fois que votre score atteint un certain niveau, vous pouvez alors débloquer de nouvelles améliorations pour faire grimper vos cookies!
                         </p>
                     </div>
                     <div class="project_more">
@@ -400,7 +421,9 @@
                     <div class="project_desc">
                         <p>
                             Application mobile Android réalisée sur mon temps libre.
-                            L'application reprend le jeu du morpion.
+                        </p>
+                        <p>
+                            Cette application reprend le jeu du morpion.
                         </p>
                     </div>
                     <div class="project_more">
