--- a/tictactoe.html
+++ b/tictactoe.html
@@ -46,7 +46,7 @@
             <div class="smartphone_container">
                 <div class="smartphone">
                     <div class="content">
-                        <video controls width="300px" height="550px">
+                        <video controls loop autoplay muted width="300px" height="550px">
                             <source src="" type="video/mp4" />
                         </video>
                     </div>
