--- a/jpo_orleans.html
+++ b/jpo_orleans.html
@@ -46,8 +46,8 @@
             <div class="smartphone_container">
                 <div class="smartphone">
                     <div class="content">
-                        <video controls width="300px" height="550px">
-                            <source src="" type="video/mp4" />
+                        <video controls loop autoplay muted width="300px" height="550px">
+                            <source src="annexes/records/jpo_recording.mp4" type="video/mp4" />
                         </video>
                     </div>
                 </div>
