--- a/cookie_clicker.html
+++ b/cookie_clicker.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="annexes/avatar.png">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
     <link href="style_desktop.css" rel="stylesheet">
     <link href="style_tablet.css" rel="stylesheet">
     <link href="style_mobile.css" rel="stylesheet">
